# MUD.ai

./: .gitignore  README.md  memory.jsonl  pyproject.toml  requirements.txt
scripts/: train_lora.md
src/mudai/: __init__.py  __main__.py  config.py
src/mudai/gui/: chat_panel.py  main_window.py  memory_panel.py  settings_dialog.py  widgets.py
src/mudai/llm/: agent.py  backend.py  chat.py  experience.py  memory.py  models_catalog.py
src/mudai/logging/: __init__.py  trace_logger.py
src/mudai/mud/: __init__.py  ansi.py  telnet_client.py
src/mudai/scripts/: __init__.py  build_training_set.py  download_model.py
tests/: __init__.py  conftest.py  test_agent.py  test_ansi.py  test_build_training_set.py  test_chat.py  test_config.py  test_experience.py  test_memory.py  test_think_parsing.py
